<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mobilewellbeingkit.view.HelpfulContactsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/colourButton"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolBarStyle"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Helpful Contacts"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/links_helpful_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/my_links"
        android:textColor="@color/MainPurple"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/user_links"
        app:layout_constraintTop_toBottomOf="@+id/helpful_contacts" />



    <TextView
        android:id="@+id/helpful_contacts"
        android:layout_width="0dp"
        android:layout_height="134dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/mhsh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/mental_health_services_helpline"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/MainPurple"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/helpful_contacts"
        app:layout_constraintTop_toTopOf="@+id/helpful_contacts" />

    <TextView
        android:id="@+id/mhsh_numb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:autoLink="all"
        android:text="1800 332 388"
        android:textColor="@color/MainPurple"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/helpful_contacts"
        app:layout_constraintTop_toTopOf="@+id/helpful_contacts" />

    <TextView
        android:id="@+id/lifeline"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/lifeline"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/MainPurple"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/helpful_contacts"
        app:layout_constraintTop_toBottomOf="@+id/mhsh" />

    <TextView
        android:id="@+id/lifeline_numb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:autoLink="phone"
        android:text="13 11 14"
        android:textColor="@color/MainPurple"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/helpful_contacts"
        app:layout_constraintTop_toBottomOf="@+id/mhsh_numb" />

    <TextView
        android:id="@+id/kids_helpline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/kids_helpline"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/MainPurple"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/helpful_contacts"
        app:layout_constraintTop_toBottomOf="@+id/lifeline" />

    <TextView
        android:id="@+id/kidshelpline_numb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:autoLink="all"
        android:text="1800 551 800"
        android:textColor="@color/MainPurple"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/helpful_contacts"
        app:layout_constraintTop_toBottomOf="@+id/lifeline_numb" />

    <TextView
        android:id="@+id/beyond_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/beyond_blue"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/MainPurple"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/helpful_contacts"
        app:layout_constraintTop_toBottomOf="@+id/kids_helpline" />

    <TextView
        android:id="@+id/beyond_blue_helpline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/beyond_blue_help"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/MainPurple"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/helpful_contacts"
        app:layout_constraintTop_toBottomOf="@+id/beyond_blue" />

    <TextView
        android:id="@+id/blifeline_numb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:autoLink="phone"
        android:text="1300 22 4636"
        android:textColor="@color/MainPurple"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/helpful_contacts"
        app:layout_constraintTop_toBottomOf="@+id/beyond_blue_web" />

    <TextView
        android:id="@+id/beyond_blue_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:autoLink="all"
        android:text="beyondblue.org.au"
        android:textColor="@color/MainPurple"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/helpful_contacts"
        app:layout_constraintTop_toBottomOf="@+id/kidshelpline_numb" />

    <ListView
        android:id="@+id/user_links"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/links_helpful_title"
        app:layout_constraintVertical_bias="0.0"
        >

    </ListView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:clickable="true"
        android:scaleType="center"
        android:src="@drawable/trans_menu_settings"
        app:backgroundTint="@color/colourButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:elevation="0dp"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/helpful"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/mainColor"
        android:clickable="true"
        android:scaleType="center"
        android:src="@drawable/trans_menu_helpful"
        app:backgroundTint="@color/mainColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:elevation="0dp"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/journal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/mainColor"
        android:clickable="true"
        android:scaleType="center"
        android:src="@drawable/trans_menu_journal"
        app:backgroundTint="@color/mainColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:elevation="0dp"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/cards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/mainColor"
        android:clickable="true"
        android:scaleType="center"
        android:src="@drawable/trans_menu_cards"
        app:backgroundTint="@color/mainColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:elevation="0dp"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/bMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/mainColor"
        android:clickable="true"
        android:scaleType="center"
        android:src="@drawable/trans_menu_menu"
        app:backgroundTint="@color/mainColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabAddResource"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/mainColor"
        android:scaleType="center"
        android:src="@drawable/add"
        app:backgroundTint="@color/MainPurple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</android.support.constraint.ConstraintLayout>